attempt 1 at fixing input wrong sizing on mobile Safari

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -126,6 +126,9 @@
 
 .purple-input {
   width: 100%;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .here-we-are {
